# us-earnings-tracker

./: .env.example  .gitignore  AGENTS.md  Lennar_Investment_Memo.docx  README.md  build_lennar_full_model.py  lennar_5y_model.csv  lennar_5y_model.py  lennar_5y_summary.txt  lennar_full_model_2021_2030.xlsx  lennar_full_model_long.csv  lennar_model_readme.txt  pyproject.toml
app/: __init__.py  config.py  main.py  models.py  schemas.py  stock_schemas.py
app/api/: jobs.py  stocks.py
app/services/: earnings_tracker.py  market_data.py  pipeline.py  summarizer.py
app/services/asr/: __init__.py  base.py  faster_whisper_provider.py
app/storage/: base.py  local.py  stock_cache.py
app/utils/: chunking.py
data/stock_cache/: 2026-02-24.json  2026-02-26.json
podcast_summarizer_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api.py  test_chunking.py  test_earnings_tracker.py  test_pipeline.py  test_stock_cache.py  test_stocks_api.py  test_storage.py
